@@ -24,6 +24,17 @@
 
   * Report back build number and stage along with version info
 
+  * The host and the port that the agent reports to can now be set from environment vars
+
+    The host can be set with NEW_RELIC_HOST and the port with NEW_RELIC_PORT.  These setting
+    will overrride any other settings in your newrelic.yml.
+
+  * Fix RUM reporting to multiple applications
+
+    When the agent is configured to report to multiple "roll up" applications
+    RUM did not work correctly.
+
+>>>>>>> 3b105ce... RUBY-975 - Fix RUM reporting to multiple applications
 ## v3.5.3 ##
 
   * Update the collector protocol to use JSON and Ruby primitives
